--- a/lab4/src/main/resources/templates/inicio.html
+++ b/lab4/src/main/resources/templates/inicio.html
@@ -14,9 +14,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="collapse navbar-collapse" style="font-size: large;">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link" aria-current="page" th:href="@{/empleados}">Empleados</a></li>
-                        <li class="nav-item"><a class="nav-link" aria-current="page" th:href="@{/historial}">Historial</a></li>
-                        <li class="nav-item"><a class="nav-link" aria-current="page" th:href="@{/reportes}">Reportes</a></li>
+                        <li class="nav-item"><a class="nav-link" aria-current="page" th:href="@{/hr/empleados}">Empleados</a></li>
+                        <li class="nav-item"><a class="nav-link" aria-current="page" th:href="@{/hr/historial}">Historial</a></li>
+                        <li class="nav-item"><a class="nav-link" aria-current="page" th:href="@{/hr/reportes}">Reportes</a></li>
                     </ul>
                 </div>
             </div>
